--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@ span{
 color: black
 }
 </style>
-
-<div class="container">
+<a class="twitter-timeline" href="https://twitter.com/hashtag/TimesUp?ref_src=twsrc%5Etfw">Tweets by TwitterDev</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   <h2>MeToo <span>India</span></h2>
   
   <input type="text" id="myInput" style = "float:right;" onkeyup="myFunction()" placeholder="Search for a name.." title="Type in a Alleged Person">
